src/styles.css
:root {
    --color-black: #000;
    --color-grey-light: #F9F9F9;
    --color-grey: #f6f6f6;
    --color-grey-dark: #E1E1E1;
    --color-grey-darkest: #C4C4C4;
    --color-white: #fff;
    --color-purple: #9B4CEA;
    --color-blue-darkest: #0441B8;
    --color-blue-dark: #7097F9;
    --color-blue-light: #E3E9F6;
    --color-red: #EA4C68;
    --color-green: #25BE6B;

    --color-alias-header-main: var(--color-grey);
    --color-alias-list-container: var(--color-grey);
    --color-alias-input-background: var(--color-white);
    --color-alias-input-focus-background: var(--color-blue-light);
    --color-alias-quantity-excessive: var(--color-green);
    --color-alias-quantity-remaining: var(--color-purple);
    --color-alias-quantity-remaining-low: var(--color-red);
    --color-alias-quantity-unit-background: var(--color-grey-light);
    --color-alias-new-item-help-text: var(--color-blue-darkest);

    --input-border: var(--input-border-size) dashed var(--color-blue-dark);
    --primary-font-size: 18px;
    --row-gap: 23px;
    --column-gap: 13px;
    --input-padding-left: 16px;
    --input-height: 48px;
    --bar-height: var(--input-height);
    --input-border-size: 1px;
    --list-container-side-padding: 42px;
    --border-radius: 5px;
    --settings-cog-size: calc(var(--list-container-side-padding) - var(--column-gap));
    --input-unit-combo-width: 160px;
    --max-on-hand-width: var(--input-unit-combo-width);
    --row-columns-settings-off: 240px var(--input-unit-combo-width) 225px;
    --row-columns-settings-on: var(--row-columns-settings-off) var(--max-on-hand-width);
    --list-row-columns: var(--row-columns-settings-off);
    --filter-row-columns: var(--row-columns-settings-off) var(--settings-cog-size);
    --edit-transition: .2s background-color ease;
    --outside-list-container-offset: 10px;
    --right-outside-list-row: calc((var(--list-container-side-padding) + var(--outside-list-container-offset)) * -1);
    --filter-bar-top-bottom-padding: 12px;

    /* z-index */
    --quantity-used-index: 0;
    --quantity-bar-index: calc(var(--quantity-used-index) + 1);
    --sticky-header-index: calc(var(--quantity-bar-index) + 1);
}

body {
    margin: 0px;
    font-family: 'Roboto', Arial, sans-serif;
}

/* Main Content */
.mainContent {
    display: grid;
    justify-content: center;
}

/* Container */
.container {
    display: block;
}

.container--settingsOn {
    --list-row-columns: var(--row-columns-settings-on);
}

/* Header */
.header {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    background-color: var(--color-alias-header-main);
    height: 63px;
    padding: 0 52px;
}

.header__title {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    height: 40px;
    width: 202px;
    border: none;
    font-size: var(--primary-font-size);
    border: none;
    text-align: center;
}

.header__logo {
    display: flex;
    align-items: center;
    font-size: var(--primary-font-size);
    border: none;
    font-weight: normal;
    margin-right: auto;
}

.header__logo__line {
    width: 1.5px;
    height: 40px;
    margin: 0 5px;
    background-color: var(--color-black);
}

.filters {
    position: relative;
    display: grid;
    grid-template-columns: var(--filter-row-columns);
    grid-gap: var(--column-gap);
    padding-top: var(--filter-bar-top-bottom-padding);
    padding-bottom: var(--filter-bar-top-bottom-padding);
    padding-left: var(--list-container-side-padding);
}

.filters__button {
    grid-column: 2;
    width: 100%;
    border: var(--input-border);
    background-color: var(--color-alias-input-background);
    border-radius: var(--border-radius);
    appearance: none;
    height: var(--input-height);
    font-size: var(--primary-font-size);
    color: var(--color-blue-dark);
    cursor: pointer;
}

.filters__button--grey {
    border-color: var(--color-grey-darkest);
    color: var(--color-grey-darkest);
}

.filters__button:hover, .filters__button:focus {
    background-color: var(--color-alias-input-focus-background);
}

.filters__settingsCog {
    width: var(--settings-cog-size);
    height: var(--settings-cog-size);
    cursor: pointer;
}

/* Filter Bar */
.filterBar {
    grid-column: 3;
}

.filterBar__used {
    border: 1px solid var(--color-grey-dark);
    border-radius: var(--border-radius);
    background-color: var(--color-grey-light);
}

.filterBar__mainPercentage {
    background-color: var(--color-grey-darkest);
}


/* List Container */
.listContainer {
    padding: 0 var(--list-container-side-padding) 32px;
    background-color: var(--color-alias-list-container);
    border-radius: var(--border-radius);
}

.listContainer__header {
    position: sticky;
    top: 0;
    display: grid;
    grid-template-columns: var(--list-row-columns);
    padding: var(--column-gap) 0;
    grid-gap: var(--column-gap);
    background-color: var(--color-alias-list-container);
    z-index: var(--sticky-header-index);
}

.listContainer__rows {
    display: grid;
    grid-gap: var(--row-gap);
    list-style-type: none;
    margin-top: 0;
    padding: 0;
}

.row {
    display: grid;
    position: relative;
    grid-template-columns: var(--list-row-columns);
    grid-gap: var(--column-gap);
}

.row__confirmTick {
    --height: 48px;
    --width: 55px;
    position: absolute;
    right: calc(var(--right-outside-list-row) - var(--width));
    cursor: pointer;
    border-radius: 50%;
    width: var(--width);
    height: var(--height);
    border: var(--input-border-size) dashed transparent;
    display: flex;
    align-items: center;
    justify-content: center;
}

.row__confirmTick:hover, .row__confirmTick:focus {
    border: var(--input-border);
    background-color: var(--color-alias-list-container);
    transition: var(--edit-transition);
    outline: none;
}

@keyframes pushed {
    0% {
        opacity: 1;
        transform: scale(1);
    }

    40% {
        opacity: 1;
        transform: scale(.9);
    }

    80% {
        opacity: .8;
    }

    100% {
        opacity: 0;
        transform: scale(1.1);
    }
}

.row__confirmTick--hidden {
    opacity: 0; 
    animation: .2s pushed;
}

/* InputBox */
.inputBox {
    height: var(--input-height);
    padding-left: var(--input-padding-left);
    font-size: var(--primary-font-size);
    border: none;
    background-color: var(--color-white);
}

.inputBox::placeholder {
    color: var(--color-alias-new-item-help-text);
}

.inputBox--covered {
    position: relative;
}

.inputBox--covered::after {
    content: '';
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: var(--color-grey-light);
    border: 1px solid var(--color-grey-dark);
    border-radius: 4px;
}

.inputBox__innerEdit {
    height: var(--quantity-edit-height);
    font-size: var(--primary-font-size);
    box-sizing: border-box;
    text-align: center;
    border: 1px solid transparent;
    min-width: 0;
}

.inputBox__innerEdit:hover:not(:disabled), .inputBox__innerEdit:focus:not(:disabled) {
    transition: var(--edit-transition);
    border: var(--input-border);
    background-color: var(--color-alias-input-focus-background);
    outline: 0;
}

/* quantity */
:root {
    --quantity-edit-height: 31px;
}

.quantity {
    display: flex;
    align-items: center;
}

.quantity__edit {
    flex: 1 1 0;
    margin: 0 4px;
}

.quantity__edit--excessive {
    color: var(--color-alias-quantity-excessive);
}

.quantity__unit {
    flex: 0 0 auto;
    padding: 0 8px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--color-alias-quantity-unit-background);
    height: 100%;
    width: 77px;
    box-sizing: border-box;
    margin-left: auto;
}

.quantity__unit__innerEdit {
    flex: 1 1 auto;
    width: 100%;
    margin: 0 4px;
    background-color: var(--color-grey-light);
}

/* Bar */
.bar {
    display: flex;
    position: relative;
    background-color: var(--color-white);
    height: var(--bar-height);
}

.bar__mainPercentage {
    position: relative;
    margin-left: auto;
    border-radius: var(--border-radius) 0 var(--border-radius) 0;
    z-index: var(--quantity-bar-index);
}

.bar__mainPercentage__lever {
    --cursor: ew-resize;
    --opacity: 0;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0px;
    width: 10px;
    opacity: var(--opacity);
    background-color: black;
    z-index: var(--quantity-bar-index);
    cursor: var(--cursor);
}

.bar__mainPercentage__lever:hover {
    --opacity: .2;
}

.bar--disabled .bar__mainPercentage__lever:hover {
    --opacity: 0;
    --cursor: default;
}

.bar__used {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: 0;
}

/* Quantity Bar */
.bar__quantityUsed:hover {
    --border: var(--input-border-size) dashed var(--color-blue-dark); 
    --background-color: var(--color-blue-light);
    --cursor: pointer;
    transition: var(--edit-transition);
    border: var(--border);
    background-color: var(--background-color);
    cursor: var(--cursor);
    z-index: var(--quantity-used-index);
}

.bar--disabled .bar__quantityUsed:hover {
    --border: none;
    --background-color: var(--color-white);
    --cursor: default;
}

.bar__quantityExcessive {
    background-color: var(--color-alias-quantity-excessive);
    z-index: var(--quantity-bar-index);
    border-top-left-radius: var(--border-radius);
}

.bar__quantityRemaining {
    background-color: var(--color-alias-quantity-remaining);
}

.bar__quantityRemaining--excessive {
    border-top-left-radius: 0;
}

.bar__quantityRemaining--low {
    background-color: var(--color-alias-quantity-remaining-low);
}

.time {
    display: flex;
    align-items: center;
}

.time__input {
    flex: 1 1 0;
    width: 0;
    padding-left: 7px;
    margin-right: var(--input-padding-left);
    text-align: left;
}

/* Utility Classes */
.hidden {
    display: none;
}

.centerBoth {
    display: flex;
    justify-content: center;
    align-items: center;
}

